versioned_docs/version-4.0.x/reference/functions/Copy-ADTContentToCache.mdx
---
id: Copy-ADTContentToCache
title: Copy-ADTContentToCache
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Copies the toolkit content to a cache folder on the local machine and sets the $adtSession.DirFiles and $adtSession.DirSupportFiles directory to the cache path.

## SYNTAX

```powershell
Copy-ADTContentToCache [[-Path] <String>] [<CommonParameters>]
```

## DESCRIPTION

Copies the toolkit content to a cache folder on the local machine and sets the $adtSession.DirFiles and $adtSession.DirSupportFiles directory to the cache path.

This function is useful in environments where an Endpoint Management solution does not provide a managed cache for source files, such as Intune.

It is important to clean up the cache in the uninstall section for the current version and potentially also in the pre-installation section for previous versions.

## EXAMPLES

### EXAMPLE 1

```powershell
Copy-ADTContentToCache -Path "$envWinDir\Temp\PSAppDeployToolkit"
```

This example copies the toolkit content to the specified cache folder.

## PARAMETERS

### -Path

The path to the software cache folder.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 1
Default value: "$((Get-ADTConfig).Toolkit.CachePath)\\$((Get-ADTSession).InstallName)"
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not generate any output.
## NOTES
An active ADT session is required to use this function.

This can be used in the absence of an Endpoint Management solution that provides a managed cache for source files, e.g.
Intune is lacking this functionality whereas ConfigMgr includes this functionality.

Since this cache folder is effectively unmanaged, it is important to cleanup the cache in the uninstall section for the current version and potentially also in the pre-installation section for previous versions.

This can be done using `Remove-ADTFile -Path "(Get-ADTConfig).Toolkit.CachePath\$($adtSession.InstallName)" -Recurse -ErrorAction Ignore`.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[Copy-ADTContentToCache](./Copy-ADTContentToCache.mdx)
