versioned_docs/version-4.1.x/reference/functions/Copy-ADTContentToCache.mdx
---
id: Copy-ADTContentToCache
title: Copy-ADTContentToCache
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Copies the toolkit content to a cache folder on the local machine and sets the $adtSession.DirFiles and $adtSession.DirSupportFiles directory to the cache path.

## SYNTAX

```powershell
Copy-ADTContentToCache [[-LiteralPath] <String>] [-WhatIf] [-Confirm] [<CommonParameters>]
```

## DESCRIPTION

Copies the toolkit content to a cache folder on the local machine and sets the $adtSession.DirFiles and $adtSession.DirSupportFiles directory to the cache path.

This function is useful in environments where an Endpoint Management solution does not provide a managed cache for source files, such as Intune.

It is important to clean up the cache in the uninstall section for the current version and potentially also in the pre-installation section for previous versions.

## EXAMPLES

### EXAMPLE 1

```powershell
Copy-ADTContentToCache -LiteralPath "$envWinDir\Temp\PSAppDeployToolkit"
```

This example copies the toolkit content to the specified cache folder.

## PARAMETERS

### -LiteralPath

The path to the software cache folder.

```yaml
Type: String
Parameter Sets: (All)
Aliases: Path, PSPath

Required: False
Position: 1
Default value: "$((& $Script:CommandTable.'Get-ADTConfig').Toolkit.CachePath)\\$((& $Script:CommandTable.'Get-ADTSession').InstallName)"
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if the cmdlet runs.
The cmdlet is not run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Confirm

Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not generate any output.
## NOTES
An active ADT session is required to use this function.

This can be used in the absence of an Endpoint Management solution that provides a managed cache for source files, e.g.
Intune is lacking this functionality whereas ConfigMgr includes this functionality.

Since this cache folder is effectively unmanaged, it is important to cleanup the cache in the uninstall section for the current version and potentially also in the pre-installation section for previous versions.

This can be done using `Remove-ADTFile -LiteralPath "(Get-ADTConfig).Toolkit.CachePath\$($adtSession.InstallName)" -Recurse -ErrorAction Ignore`.

This function supports the -WhatIf and -Confirm parameters for testing changes before applying them.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Copy-ADTContentToCache](https://psappdeploytoolkit.com/docs/reference/functions/Copy-ADTContentToCache)
